# repair_cafe

./: .env.production.template  .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MAINTENANCE_GUIDE.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  SESSION_STATE.md  add_dutch_translations.py  pyproject.toml  setup.sh
config/: asgi.py  settings.py  urls.py  wsgi.py
devices/: admin.py  barcode_utils.py  forms.py  models.py  urls.py  views.py
devices/management/commands/: create_admin.py  sync_user_roles.py
devices/migrations/: 0001_initial.py  0002_device_investigation_cost_paid_and_more.py
devices/static/css/: style.css
devices/templates/admin/: base_site.html
devices/templates/devices/: base.html  dashboard.html  detail.html  intake.html  login.html  print_formulier.html  print_label.html  reminders.html  repair_station.html  update.html  user_confirm_delete.html  user_form.html  user_list.html
locale/en/LC_MESSAGES/: django.po
locale/nl/LC_MESSAGES/: django.mo  django.po
